[package]
name = "symproxycloud"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["tower-log", "macros"] }
azure_core = "0.20.0"
azure_identity = "0.20.0"
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
futures = "0.3.30"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
