[package]
name = "symproxycloud"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.5", features = ["tower-log", "macros"] }
azure_core = "0.20.0"
azure_identity = "0.20.0"
azure_storage = "0.20.0"
azure_storage_blobs = "0.20.0"
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
figment = { git = "https://github.com/SergioBenitez/Figment.git", version = "0.10.19", features = ["toml", "env"] }
form_urlencoded = "1.2.1"
futures = "0.3.30"
reqwest = { version = "0.12.7", default-features = false, features = ["default-tls", "charset"]}
serde = { version = "1.0.210", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "process", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["io"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = "1.10.0"
